--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,8 @@
       {% for node in pages_list %}
         {% if node.title != null %}
           {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+            {% capture page_url %}{{ site.baseurl }} {{ node.url }}{% endcapture %}
+            <a class="sidebar-nav-item{% if page.url == page_url %} active{% endif %}" href="{{ page_url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
       {% endfor %}
