--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,7 @@
         {% endif %}
       {% endfor %}
 
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}atom.xml">Feed</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
